Refactor e simplificação do código